third_party/rust/chromium_crates_io/vendor/cxx-v1/tests/ui/enum_receiver.stderr
error: unsupported receiver type; C++ does not allow member functions on enums
 --> tests/ui/enum_receiver.rs:7:20
  |
7 |         fn f(self: &Enum);
  |                    ^^^^^
